--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testejunior",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "surge": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
